# go2web

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  justfile  main.py  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  zizmor.yml
CHANGELOG/: 0.1.0.md  0.2.0.md
docs/: api.md  index.md  installation.md  usage.md
docs/api/: cache.md  commands.md  http.md  index.md  parsers.md  search.md
src/go2web/: __init__.py  cli.py  console.py  main.py
src/go2web/cache/: store.py
src/go2web/commands/: fetch.py  search.py
src/go2web/http/: client.py
src/go2web/http/parsers/: __init__.py  abstract_parser.py  exceptions.py  html_parser.py  json_parser.py  parser_manager.py  plain_text_parser.py
src/go2web/search/: result.py
src/go2web/search/engines/: __init__.py  base.py  bing.py
tests/: test_go2web.py
